update name and count for tic tac toi

--- a/help_js/index.html
+++ b/help_js/index.html
@@ -12,7 +12,9 @@
 
 <body>
 
-
+<input type="text" id="txt">
+<button id="btn" onclick="click()">click</button>
+<p id="element">Element:</p>
 
    
 
