add reset button

--- a/lesson_25_tictactoe/index.html
+++ b/lesson_25_tictactoe/index.html
@@ -10,11 +10,10 @@
     <title>Document</title>
 </head>
 
-<body id="body">
+<body id="body" >
 
-    <div class="namep ">player X <span id="player_name_X"> (name)</span> = <span id="player_X">0</span> win game!</div>
-    <div class="namep " id="name_o">player O <span id="player_name_O"> (name)</span> = <span id="player_O">0</span> win
-        game!</div>
+    <div class="namep " >player X <span id="player_name_X"> (name)</span> = <span id="player_X">0</span> win game!</div>
+    <div class="namep " id="name_o">player O <span id="player_name_O"> (name)</span> = <span id="player_O">0</span> win game!</div>
     <button id="btn_name" onclick="namesPlayers()">play with names</button><br><br><br>
     <!-- create a 3 X 3 table with botton in every box -->
     <div class="container">
@@ -39,7 +38,7 @@
         </div>
         <div class="side_manu">
             <button id="reset_btn" onclick="reset()">Reset game</button>
-            <button id="clear" onclick="clear()">Reset All</button>
+            <button id="clear" onclick="resetAll()">clear</button>
         </div>
     </div>
 
