--- a/lesson_26_json/index.html
+++ b/lesson_26_json/index.html
@@ -5,22 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
-
 </head>
 
 <body>
-
-<!-- <input type="text" id="txt">
-<button id="btn" onclick="click()">click</button>
-<p id="element">Element:</p> -->
-
-   
+ 
 
 
-<script src="practise.js"></script>
-<script src="practise2.js"></script>
+
+
 </body>
 
 </html>
