--- a/lesson_29_js/index.html
+++ b/lesson_29_js/index.html
@@ -7,20 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Document</title>
-
 </head>
 
 <body>
 
-<!-- <input type="text" id="txt">
-<button id="btn" onclick="click()">click</button>
-<p id="element">Element:</p> -->
 
-   
 
-<script src="script_help_.js"></script>
-<script src="practise.js"></script>
-<script src="practise2.js"></script>
+    <script src="promise.js" ></script>
 </body>
 
 </html>
