--- a/help_js/index.html
+++ b/help_js/index.html
@@ -16,11 +16,13 @@
 <button id="btn" onclick="click()">click</button>
 <p id="element">Element:</p> -->
 
-   
 
-<script src="script_help_.js"></script>
-<script src="practise.js"></script>
-<script src="practise2.js"></script>
+
+<!-- <script src="script_help_.js"></script> -->
+<!-- <script src="practise.js"></script> --> 
+ <script src="practise2.js"></script>
+
+
 </body>
 
 </html>
